- Fixed a crash when binding Foci, if the treenode for the focus had not been selected. Closes #3905
- Anthro drones now receive 8 base physical condition monitor boxes instead of 6, per Rigger 5 rules. I don't personally agree with this rule since it effectively means they have 10 base due to limbs, but whatever. 

Data Changes:
- Tetrachromacy now adds adds +3 to Perception, with a (Visual) condition. This will be exposed to the Print method for character sheets at a later date. 
- Grapple Fist cyberware now properly uses the skill of the Grapple Gun Exotic skill.
- Fixed an issue with the Private Investigator life module that prevented it from being added.
- Removed Ratings from Cosmetic Surgery, replaced with variable cost.
- Added RatingLabel to Fiberoptic Hair and Telescoping Limbs. 
- Fixed an issue with the Point Priority Chargen customdata file causing metahumans to be unavailable.
- Added missing Device Ratings to the RG Pi-Tacs.
- Added missing minimum rating on Reaction Enhancers, courtesy of JoshuarTree.
- Added correct Rank qualities to the Military Academy and Military School life modules. 
- Ares Cheetah and Cyberspace Designs Dragonfly now have their integrated weapons. 
- Fixed missing Flight power for the Feathered Drake.
- Fixed the Glock MP Custodes (MPV) incorrectly being allowed to take a Concealed Quick-Draw Holster.
- Added warforms from Howling Shadows. 
- Underbarrel weapons are now properly restricted to weapons that can take them. 
- All underbarrel weapons from Run and Gun have been properly created as weapons, where data exists for them. I'm not going to add the chainsaw, because there's no firm raw on what a chainsaw is. Closes #3553
- Added a new customdata item to override the Acceleration of the Yamaha Kaburaya from 3 to 4, per German data changes. Closes #3908
- Fixed a missing accuracy bonus for Raptor Foot cyberware when also equipped with digigrade legs. Closes #3863